--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                      <p>Benimle ilgili bilgileri görmek için aşağıdaki linke tıklayınn...</p>
 
-        <a href="webtasarım3.hafta2.sayfa.HTML">2.sayfama git</a>
+        <a href="webtasarım3.hafta2.sayfa.html">2.sayfama git</a>
 
         
 
